# HoklengPro-Group11computershopFlutterdev11

./: .gitignore  README.md  pubspec.yaml
android/: MAPS_KEY.example
android/app/: build.gradle
backend/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  compose.yaml  openapi.yaml  podman-compose.yml
backend/data/: catalog.json  orders.json  users.json
backend/db/: 002_postgres_catalog.sql  init.sql
backend/include/nexus/db/: database.h
backend/include/nexus/middleware/: auth_guard.h  cors.h
backend/include/nexus/repositories/: catalog_repository.h
backend/include/nexus/routes/: route_registry.h  swagger_routes.h
backend/include/nexus/services/: auth_service.h  catalog_service.h  order_service.h
backend/include/nexus/utils/: json_response.h  openapi_generator.h
backend/scripts/: migrate-postgres.sh  podman-up.sh
backend/src/: main.cpp
backend/src/db/: database.cpp
backend/src/repositories/: catalog_repository.cpp
backend/src/routes/: route_registry.cpp  swagger_routes.cpp
backend/src/services/: auth_service.cpp  catalog_service.cpp  order_service.cpp
backend/src/utils/: openapi_generator.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_shell.dart  main.dart
lib/config/: api_config.dart  google_maps_config.dart  map_config.dart
lib/models/: admin_models.dart  catalog_models.dart  models.dart  user_session.dart  view_state.dart
lib/screens/: admin_screens.dart  (+7 more)
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+22 files in other folders)
